Have an initial skeleton of how the game should work, there are a few things that are not covered such as guessing the same letter twice and display is a little funky

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
 </head>
 <body>
-	
+    <h2>Word: <span id="guess-word"><strong>_</strong></span></h2>
+    <h2>Number of Guesses Remaining = <span id="num-user-guesses"><strong>...Nothing.</strong></span></h2>
+    <h2>Letters already guessed <span id="guessed-letters"><strong>...Nothing.</strong></span></h2>
 </body>
 </html>
