--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="col-lg-3 game-column">
 				<h2>Press any key to get started!</h2>
-				<h2>Wins </h2>
+				<h2>Wins <span id="win-count"><strong></strong></span></h2></h2>
 			    <h2>Current Word </h2>
 			   	<h2><span id="guess-word"><strong></strong></span></h2>
 			    <h2>Number of Guesses Remaining <span id="num-user-guesses"><strong></strong></span></h2>
